Fix editor textarea overflow

--- a/assets/css/default/style.css
+++ b/assets/css/default/style.css
@@ -86,7 +86,7 @@ ul.ce-menu > li.active ul {
 
 .ce-window-body {
 	background-color: #FFFFFF;
-	overflow: auto;
+	overflow: hidden;
 	height: 100%;
 	width: 100%;
 }
@@ -213,6 +213,9 @@ ul.ce-menu > li.active ul {
 
 .ce-editor {
 	box-sizing: border-box;
+	border: none;
+	margin: 0;
+	padding: 4px;
 	width: 100%;
 	height: 100%;
 	color: #000033;
